--- a/maven-repo/jvstm/jvstm/index.html
+++ b/maven-repo/jvstm/jvstm/index.html
@@ -5,6 +5,7 @@
 <pre>
 <a href="../">../</a>
 <a href="2.0/">2.0/</a>
+<a href="2.1/">2.1/</a>
 <a href="maven-metadata.xml">maven-metadata.xml</a>
 <a href="maven-metadata.xml.md5">maven-metadata.xml.md5</a>
 <a href="maven-metadata.xml.sha1">maven-metadata.xml.sha1</a>
